--- a/.github/workflows/ping-integration.yaml
+++ b/.github/workflows/ping-integration.yaml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - run: mkdir -p build
+      - run: ls -l
+      - run: ls -l taxonomies
 
       - uses: montudor/action-zip@v1
         with: # recursive, archive name and path without extension, what to archive
