--- a/.github/workflows/ping-integration.yaml
+++ b/.github/workflows/ping-integration.yaml
@@ -1,4 +1,4 @@
-name: Taxonomy build
+name: Taxonomy build, Ping Integration
 on:
   workflow_dispatch:
   push:
@@ -7,7 +7,7 @@ env:
   TAX_NAME: jenv_taxonomy_2024
 
 jobs:
-  build_and_test:
+  build_and_ping:
     runs-on: ubuntu-latest
     name: Build Taxonomy package
     steps:
